@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)troff.h	1.8 (gritter) 8/29/05
+ * Sccsid @(#)troff.h	1.9 (gritter) 8/30/05
  */
 
 extern struct tracktab {
@@ -51,3 +51,4 @@ extern	long		realpage;
 extern	void		growfonts(int);
 extern	void		loadafm(int, int, char *, char *);
 extern	int		getkw(tchar, tchar);
+extern	void		ptpapersize(int, int);
