@@ -19,6 +19,8 @@ Release ...
   using the "libhnj" variant from the OpenOffice project. The ".hylang"
   request has been introduced to select between languages. Hyphenation
   files have been derived from TeX sources.
+* troff: The paper size can be selected with the ".papersize" request.
+  This is important for correct placement of pages on PostScript printers.
 * troff: The ".fzoom" request allows to zoom the characters of a font.
 * [nt]roff: The ".lc_ctype" request can be used to set the LC_CTYPE
   localization setting from within a document.
